ocio-sys/src/bridge.hpp

typedef struct OcioGpuTexture2DInfo {
  const char* texture_name;
  const char* sampler_name;
  unsigned width;
  unsigned height;
  int channel;
  int dimensions;
  int interpolation;
  unsigned binding_index;
} OcioGpuTexture2DInfo;
typedef struct OcioGpuTexture3DInfo {
  const char* texture_name;
  const char* sampler_name;
  unsigned edge_len;
  int interpolation;
  unsigned binding_index;
} OcioGpuTexture3DInfo;
typedef struct OcioGpuUniformInfo {
  const char* name;
  int type;
  size_t buffer_offset;
  size_t value_count;
} OcioGpuUniformInfo;
// --- GpuShaderDesc ---
void* ocio_gpu_shader_desc_create_shader_desc(void);
void* ocio_gpu_shader_desc_create(void);
void ocio_gpu_shader_desc_destroy(void* handle);
void* ocio_gpu_shader_desc_clone(void* handle);
unsigned ocio_gpu_shader_desc_get_num_uniforms_u32(void* handle);
bool ocio_gpu_shader_desc_get_uniform_info(void* handle, unsigned index, OcioGpuUniformInfo* out);
size_t ocio_gpu_shader_desc_get_uniform_value_count(void* handle, unsigned index);
bool ocio_gpu_shader_desc_copy_uniform_f32_values(void* handle, unsigned index, float* values, size_t len);
bool ocio_gpu_shader_desc_copy_uniform_i32_values(void* handle, unsigned index, int* values, size_t len);
size_t ocio_gpu_shader_desc_get_uniform_buffer_size_bytes(void* handle);
unsigned ocio_gpu_shader_desc_get_num_textures_u32(void* handle);
bool ocio_gpu_shader_desc_get_texture_info(void* handle, unsigned index, OcioGpuTexture2DInfo* out);
size_t ocio_gpu_shader_desc_get_texture_value_count(void* handle, unsigned index);
bool ocio_gpu_shader_desc_copy_texture_values(void* handle, unsigned index, float* values, size_t len);
unsigned ocio_gpu_shader_desc_get_num3d_textures_u32(void* handle);
bool ocio_gpu_shader_desc_get3d_texture_info(void* handle, unsigned index, OcioGpuTexture3DInfo* out);
size_t ocio_gpu_shader_desc_get3d_texture_value_count(void* handle, unsigned index);
bool ocio_gpu_shader_desc_copy3d_texture_values(void* handle, unsigned index, float* values, size_t len);
void* ocio_gpu_shader_desc_get_num_uniforms(void* handle);
void* ocio_gpu_shader_desc_get_uniform(void* handle, void* index, void* data);
void* ocio_gpu_shader_desc_get_uniform_buffer_size(void* handle);
void* ocio_gpu_shader_desc_get_num_textures(void* handle);
void ocio_gpu_shader_desc_get_texture(void* handle, void* index, const char* textureName, const char* samplerName, void* width, void* height, void* channel, void* dimensions, void* interpolation);
void ocio_gpu_shader_desc_get_texture_values(void* handle, void* index, const float* values);
void* ocio_gpu_shader_desc_get_texture_shader_binding_index(void* handle, void* index);
void* ocio_gpu_shader_desc_get_num3d_textures(void* handle);
void ocio_gpu_shader_desc_get3d_texture(void* handle, void* index, const char* textureName, const char* samplerName, void* edgelen, void* interpolation);
void ocio_gpu_shader_desc_get3d_texture_values(void* handle, void* index, const float* values);
void* ocio_gpu_shader_desc_get3d_texture_shader_binding_index(void* handle, void* index);
void* ocio_gpu_shader_desc_get_shader_text(void* handle);
// --- Baker ---
void* ocio_baker_create(void);
void ocio_baker_destroy(void* handle);
void* ocio_baker_get_config(void* handle);
void ocio_baker_set_config(void* handle, void* config);
void* ocio_baker_get_format(void* handle);
void ocio_baker_set_format(void* handle, const char* formatName);
void* ocio_baker_get_format_metadata(void* handle);
void* ocio_baker_get_format_metadata_v1(void* handle);
void* ocio_baker_get_input_space(void* handle);
void ocio_baker_set_input_space(void* handle, const char* inputSpace);
void* ocio_baker_get_shaper_space(void* handle);
void ocio_baker_set_shaper_space(void* handle, const char* shaperSpace);
void* ocio_baker_get_looks(void* handle);
void ocio_baker_set_looks(void* handle, const char* looks);
void* ocio_baker_get_target_space(void* handle);
void ocio_baker_set_target_space(void* handle, const char* targetSpace);
void* ocio_baker_get_display(void* handle);
void* ocio_baker_get_view(void* handle);
void ocio_baker_set_display_view(void* handle, const char* display, const char* view);
int ocio_baker_get_shaper_size(void* handle);
void ocio_baker_set_shaper_size(void* handle, int shapersize);
int ocio_baker_get_cube_size(void* handle);
void ocio_baker_set_cube_size(void* handle, int cubesize);
void ocio_baker_bake(void* handle, void* os);
void* ocio_baker_bake_to_string(void* handle);
// --- Context ---
void* ocio_context_create(void);
void ocio_context_destroy(void* handle);
void* ocio_context_get_cache_id(void* handle);
void ocio_context_set_search_path(void* handle, const char* path);
void* ocio_context_get_search_path(void* handle);
int ocio_context_get_num_search_paths(void* handle);
void* ocio_context_get_search_path_by_index(void* handle, int index);
void ocio_context_clear_search_paths(void* handle);
void ocio_context_add_search_path(void* handle, const char* path);
void ocio_context_set_working_dir(void* handle, const char* dirname);
void* ocio_context_get_working_dir(void* handle);
void ocio_context_set_string_var(void* handle, const char* name, const char* value);
void* ocio_context_get_string_var(void* handle, const char* name);
int ocio_context_get_num_string_vars(void* handle);
void* ocio_context_get_string_var_name_by_index(void* handle, int index);
void* ocio_context_get_string_var_by_index(void* handle, int index);
void ocio_context_clear_string_vars(void* handle);
void ocio_context_add_string_vars(void* handle, void* ctx);
void ocio_context_set_environment_mode(void* handle, int mode);
int ocio_context_get_environment_mode(void* handle);
void ocio_context_load_environment(void* handle);
void* ocio_context_resolve_string_var(void* handle, const char* string);
void* ocio_context_resolve_string_var_v1(void* handle, const char* string, void* usedContextVars);
void* ocio_context_resolve_file_location(void* handle, const char* filename);
void* ocio_context_resolve_file_location_v1(void* handle, const char* filename, void* usedContextVars);
void ocio_context_set_config_io_proxy(void* handle, void* ciop);
void* ocio_context_get_config_io_proxy(void* handle);
// --- AllocationTransform ---
void* ocio_allocation_transform_create(void);
void ocio_allocation_transform_destroy(void* handle);
void* ocio_allocation_transform_create_editable_copy(void* handle);
int ocio_allocation_transform_get_direction(void* handle);
void ocio_allocation_transform_set_direction(void* handle, int dir);
void ocio_allocation_transform_validate(void* handle);
int ocio_allocation_transform_get_allocation(void* handle);
void ocio_allocation_transform_set_allocation(void* handle, int allocation);
int ocio_allocation_transform_get_num_vars(void* handle);
void ocio_allocation_transform_get_vars(void* handle, void* vars);
void ocio_allocation_transform_set_vars(void* handle, int numvars, const float* vars);
// --- BuiltinTransform ---
void* ocio_builtin_transform_create(void);
void ocio_builtin_transform_destroy(void* handle);
void* ocio_builtin_transform_get_style(void* handle);
void ocio_builtin_transform_set_style(void* handle, const char* style);
void* ocio_builtin_transform_get_description(void* handle);
// --- CDLTransform ---
void* ocio_cdl_transform_create(void);
void* ocio_cdl_transform_from_file(const char* src, const char* cccId);
void* ocio_cdl_transform_create_group_from_file(const char* src);
void ocio_cdl_transform_destroy(void* handle);
void* ocio_cdl_transform_get_format_metadata(void* handle);
void* ocio_cdl_transform_get_format_metadata_v1(void* handle);
void* ocio_cdl_transform_get_format_metadata_v2(void* handle);
bool ocio_cdl_transform_equals(void* handle, void* other);
int ocio_cdl_transform_get_style(void* handle);
void ocio_cdl_transform_set_style(void* handle, int style);
void ocio_cdl_transform_get_slope(void* handle, void* rgb);
void ocio_cdl_transform_set_slope(void* handle, const double* rgb);
void ocio_cdl_transform_get_offset(void* handle, void* rgb);
void ocio_cdl_transform_set_offset(void* handle, const double* rgb);
void ocio_cdl_transform_get_power(void* handle, void* rgb);
void ocio_cdl_transform_set_power(void* handle, const double* rgb);
void ocio_cdl_transform_get_sop(void* handle, void* vec9);
void ocio_cdl_transform_set_sop(void* handle, const double* vec9);
double ocio_cdl_transform_get_sat(void* handle);
void ocio_cdl_transform_set_sat(void* handle, double sat);
void ocio_cdl_transform_get_sat_luma_coefs(void* handle, void* rgb);
void* ocio_cdl_transform_get_id(void* handle);
void ocio_cdl_transform_set_id(void* handle, const char* id);
void* ocio_cdl_transform_get_first_sop_description(void* handle);
void ocio_cdl_transform_set_first_sop_description(void* handle, const char* description);