ocio-sys/src/lib.rs


    // --- GpuShaderDesc ---
    pub fn ocio_gpu_shader_desc_create_shader_desc() -> *mut c_void;
    pub fn ocio_gpu_shader_desc_create() -> *mut c_void;
    pub fn ocio_gpu_shader_desc_destroy(handle: *mut c_void);
    pub fn ocio_gpu_shader_desc_clone(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_gpu_shader_desc_get_num_uniforms_u32(handle: *mut c_void) -> u32;
    pub fn ocio_gpu_shader_desc_get_uniform_info(
        handle: *mut c_void,
        index: u32,
        out: *mut OcioGpuUniformInfo,
    ) -> bool;
    pub fn ocio_gpu_shader_desc_get_uniform_value_count(handle: *mut c_void, index: u32) -> usize;
    pub fn ocio_gpu_shader_desc_copy_uniform_f32_values(
        handle: *mut c_void,
        index: u32,
        values: *mut f32,
        len: usize,
    ) -> bool;
    pub fn ocio_gpu_shader_desc_copy_uniform_i32_values(
        handle: *mut c_void,
        index: u32,
        values: *mut i32,
        len: usize,
    ) -> bool;
    pub fn ocio_gpu_shader_desc_get_uniform_buffer_size_bytes(handle: *mut c_void) -> usize;
    pub fn ocio_gpu_shader_desc_get_num_textures_u32(handle: *mut c_void) -> u32;
    pub fn ocio_gpu_shader_desc_get_texture_info(
        handle: *mut c_void,
        index: u32,
        out: *mut OcioGpuTexture2DInfo,
    ) -> bool;
    pub fn ocio_gpu_shader_desc_get_texture_value_count(handle: *mut c_void, index: u32) -> usize;
    pub fn ocio_gpu_shader_desc_copy_texture_values(
        handle: *mut c_void,
        index: u32,
        values: *mut f32,
        len: usize,
    ) -> bool;
    pub fn ocio_gpu_shader_desc_get_num3d_textures_u32(handle: *mut c_void) -> u32;
    pub fn ocio_gpu_shader_desc_get3d_texture_info(
        handle: *mut c_void,
        index: u32,
        out: *mut OcioGpuTexture3DInfo,
    ) -> bool;
    pub fn ocio_gpu_shader_desc_get3d_texture_value_count(handle: *mut c_void, index: u32)
        -> usize;
    pub fn ocio_gpu_shader_desc_copy3d_texture_values(
        handle: *mut c_void,
        index: u32,
        values: *mut f32,
        len: usize,
    ) -> bool;
    pub fn ocio_gpu_shader_desc_get_num_uniforms(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_gpu_shader_desc_get_uniform(
        handle: *mut c_void,
        index: *mut c_void,
        data: *mut c_void,
    ) -> *mut c_void;
    pub fn ocio_gpu_shader_desc_get_uniform_buffer_size(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_gpu_shader_desc_get_num_textures(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_gpu_shader_desc_get_texture(
        handle: *mut c_void,
        index: *mut c_void,
        textureName: *const i8,
        samplerName: *const i8,
        width: *mut c_void,
        height: *mut c_void,
        channel: *mut c_void,
        dimensions: *mut c_void,
        interpolation: *mut c_void,
    ) -> ();
    pub fn ocio_gpu_shader_desc_get_texture_values(
        handle: *mut c_void,
        index: *mut c_void,
        values: *mut c_void,
    ) -> ();
    pub fn ocio_gpu_shader_desc_get_texture_shader_binding_index(
        handle: *mut c_void,
        index: *mut c_void,
    ) -> *mut c_void;
    pub fn ocio_gpu_shader_desc_get_num3d_textures(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_gpu_shader_desc_get3d_texture(
        handle: *mut c_void,
        index: *mut c_void,
        textureName: *const i8,
        samplerName: *const i8,
        edgelen: *mut c_void,
        interpolation: *mut c_void,
    ) -> ();
    pub fn ocio_gpu_shader_desc_get3d_texture_values(
        handle: *mut c_void,
        index: *mut c_void,
        values: *mut c_void,
    ) -> ();
    pub fn ocio_gpu_shader_desc_get3d_texture_shader_binding_index(
        handle: *mut c_void,
        index: *mut c_void,
    ) -> *mut c_void;
    pub fn ocio_gpu_shader_desc_get_shader_text(handle: *mut c_void) -> *mut c_void;

    // --- Baker ---
    pub fn ocio_baker_create() -> *mut c_void;
    pub fn ocio_baker_destroy(handle: *mut c_void);
    pub fn ocio_baker_get_config(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_baker_set_config(handle: *mut c_void, config: *mut c_void) -> ();
    pub fn ocio_baker_get_format(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_baker_set_format(handle: *mut c_void, formatName: *const i8) -> ();
    pub fn ocio_baker_get_format_metadata(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_baker_get_format_metadata_v1(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_baker_get_input_space(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_baker_set_input_space(handle: *mut c_void, inputSpace: *const i8) -> ();
    pub fn ocio_baker_get_shaper_space(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_baker_set_shaper_space(handle: *mut c_void, shaperSpace: *const i8) -> ();
    pub fn ocio_baker_get_looks(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_baker_set_looks(handle: *mut c_void, looks: *const i8) -> ();
    pub fn ocio_baker_get_target_space(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_baker_set_target_space(handle: *mut c_void, targetSpace: *const i8) -> ();
    pub fn ocio_baker_get_display(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_baker_get_view(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_baker_set_display_view(
        handle: *mut c_void,
        display: *const i8,
        view: *const i8,
    ) -> ();
    pub fn ocio_baker_get_shaper_size(handle: *mut c_void) -> i32;
    pub fn ocio_baker_set_shaper_size(handle: *mut c_void, shapersize: i32) -> ();
    pub fn ocio_baker_get_cube_size(handle: *mut c_void) -> i32;
    pub fn ocio_baker_set_cube_size(handle: *mut c_void, cubesize: i32) -> ();
    pub fn ocio_baker_bake(handle: *mut c_void, os: *mut c_void) -> ();
    pub fn ocio_baker_bake_to_string(handle: *mut c_void) -> *mut c_void;

    // --- Context ---
    pub fn ocio_context_create() -> *mut c_void;
    pub fn ocio_context_destroy(handle: *mut c_void);
    pub fn ocio_context_get_cache_id(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_context_set_search_path(handle: *mut c_void, path: *const i8) -> ();
    pub fn ocio_context_get_search_path(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_context_get_num_search_paths(handle: *mut c_void) -> i32;
    pub fn ocio_context_get_search_path_by_index(handle: *mut c_void, index: i32) -> *mut c_void;
    pub fn ocio_context_clear_search_paths(handle: *mut c_void) -> ();
    pub fn ocio_context_add_search_path(handle: *mut c_void, path: *const i8) -> ();
    pub fn ocio_context_set_working_dir(handle: *mut c_void, dirname: *const i8) -> ();
    pub fn ocio_context_get_working_dir(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_context_set_string_var(
        handle: *mut c_void,
        name: *const i8,
        value: *const i8,
    ) -> ();
    pub fn ocio_context_get_string_var(handle: *mut c_void, name: *const i8) -> *mut c_void;
    pub fn ocio_context_get_num_string_vars(handle: *mut c_void) -> i32;
    pub fn ocio_context_get_string_var_name_by_index(
        handle: *mut c_void,
        index: i32,
    ) -> *mut c_void;
    pub fn ocio_context_get_string_var_by_index(handle: *mut c_void, index: i32) -> *mut c_void;
    pub fn ocio_context_clear_string_vars(handle: *mut c_void) -> ();
    pub fn ocio_context_add_string_vars(handle: *mut c_void, ctx: *mut c_void) -> ();
    pub fn ocio_context_set_environment_mode(handle: *mut c_void, mode: i32) -> ();
    pub fn ocio_context_get_environment_mode(handle: *mut c_void) -> i32;
    pub fn ocio_context_load_environment(handle: *mut c_void) -> ();
    pub fn ocio_context_resolve_string_var(handle: *mut c_void, string: *const i8) -> *mut c_void;
    pub fn ocio_context_resolve_string_var_v1(
        handle: *mut c_void,
        string: *const i8,
        usedContextVars: *mut c_void,
    ) -> *mut c_void;
    pub fn ocio_context_resolve_file_location(
        handle: *mut c_void,
        filename: *const i8,
    ) -> *mut c_void;
    pub fn ocio_context_resolve_file_location_v1(
        handle: *mut c_void,
        filename: *const i8,
        usedContextVars: *mut c_void,
    ) -> *mut c_void;
    pub fn ocio_context_set_config_io_proxy(handle: *mut c_void, ciop: *mut c_void) -> ();
    pub fn ocio_context_get_config_io_proxy(handle: *mut c_void) -> *mut c_void;

    // --- AllocationTransform ---
    pub fn ocio_allocation_transform_create() -> *mut c_void;
    pub fn ocio_allocation_transform_destroy(handle: *mut c_void);
    pub fn ocio_allocation_transform_create_editable_copy(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_allocation_transform_get_direction(handle: *mut c_void) -> i32;
    pub fn ocio_allocation_transform_set_direction(handle: *mut c_void, dir: i32) -> ();
    pub fn ocio_allocation_transform_validate(handle: *mut c_void) -> ();
    pub fn ocio_allocation_transform_get_allocation(handle: *mut c_void) -> i32;
    pub fn ocio_allocation_transform_set_allocation(handle: *mut c_void, allocation: i32) -> ();
    pub fn ocio_allocation_transform_get_num_vars(handle: *mut c_void) -> i32;
    pub fn ocio_allocation_transform_get_vars(handle: *mut c_void, vars: *mut c_void) -> ();
    pub fn ocio_allocation_transform_set_vars(
        handle: *mut c_void,
        numvars: i32,
        vars: *mut c_void,
    ) -> ();

    // --- BuiltinTransform ---
    pub fn ocio_builtin_transform_create() -> *mut c_void;
    pub fn ocio_builtin_transform_destroy(handle: *mut c_void);
    pub fn ocio_builtin_transform_get_style(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_builtin_transform_set_style(handle: *mut c_void, style: *const i8) -> ();
    pub fn ocio_builtin_transform_get_description(handle: *mut c_void) -> *mut c_void;

    // --- CDLTransform ---
    pub fn ocio_cdl_transform_create() -> *mut c_void;
    pub fn ocio_cdl_transform_destroy(handle: *mut c_void);
    pub fn ocio_cdl_transform_from_file(src: *const i8, cccId: *const i8) -> *mut c_void;
    pub fn ocio_cdl_transform_create_group_from_file(src: *const i8) -> *mut c_void;
    pub fn ocio_cdl_transform_get_format_metadata(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_cdl_transform_get_format_metadata_v1(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_cdl_transform_get_format_metadata_v2(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_cdl_transform_equals(handle: *mut c_void, other: *mut c_void) -> bool;
    pub fn ocio_cdl_transform_get_style(handle: *mut c_void) -> i32;
    pub fn ocio_cdl_transform_set_style(handle: *mut c_void, style: i32) -> ();
    pub fn ocio_cdl_transform_get_slope(handle: *mut c_void, rgb: *mut c_void) -> ();
    pub fn ocio_cdl_transform_set_slope(handle: *mut c_void, rgb: *mut c_void) -> ();
    pub fn ocio_cdl_transform_get_offset(handle: *mut c_void, rgb: *mut c_void) -> ();
    pub fn ocio_cdl_transform_set_offset(handle: *mut c_void, rgb: *mut c_void) -> ();
    pub fn ocio_cdl_transform_get_power(handle: *mut c_void, rgb: *mut c_void) -> ();
    pub fn ocio_cdl_transform_set_power(handle: *mut c_void, rgb: *mut c_void) -> ();
    pub fn ocio_cdl_transform_get_sop(handle: *mut c_void, vec9: *mut c_void) -> ();
    pub fn ocio_cdl_transform_set_sop(handle: *mut c_void, vec9: *mut c_void) -> ();
    pub fn ocio_cdl_transform_get_sat(handle: *mut c_void) -> f64;
    pub fn ocio_cdl_transform_set_sat(handle: *mut c_void, sat: f64) -> ();
    pub fn ocio_cdl_transform_get_sat_luma_coefs(handle: *mut c_void, rgb: *mut c_void) -> ();
    pub fn ocio_cdl_transform_get_id(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_cdl_transform_set_id(handle: *mut c_void, id: *const i8) -> ();
    pub fn ocio_cdl_transform_get_first_sop_description(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_cdl_transform_set_first_sop_description(
        handle: *mut c_void,
        description: *const i8,
    ) -> ();
